# ggb-lang

./: .gitignore  .travis.yml  Cargo.toml  README.md  index.html  lang.lang  rustfmt.toml  search-index.js  settings.html  source-files.js
ggbc/: Cargo.toml  all.html  fn.compile.html  index.html  sidebar-items.js  type.Bytes.html
ggbc/error/: enum.Error.html  index.html  sidebar-items.js
ggbc/examples/: rust.rs
ggbc/ir/: index.html  sidebar-items.js  struct.Handlers.html  struct.Ir.html  struct.Routine.html
ggbc/ir/opcodes/: enum.Destination.html  enum.Location.html  enum.Pointer.html  enum.Source.html  enum.Statement.html  enum.StopStatus.html  index.html  sidebar-items.js  struct.Mnemonic.html  type.Address.html  type.Register.html
ggbc/src/: ir.rs  lib.rs  target.rs
ggbc/src/ir/: alloc.rs  compile.rs  expression.rs  layout.rs  opcodes.rs  optimize.rs
ggbc/src/ir/compile/: alloc.rs  expression.rs  layout.rs  optimize.rs
ggbc/tests/: const.rs  const_expr.rs  ir.rs  rust.rs  static.rs
parser/: Cargo.toml
parser/examples/: parse.rs
parser/src/: ast.rs  lex.rs  lib.rs
parser/src/ast/: asm.rs  context.rs  expression.rs  macros.rs  path.rs  static.rs  types.rs
parser/src/lex/: macros.rs  raw.rs  span.rs
parser/tests/: lex.rs  parse.rs  span.rs
vm/: Cargo.toml
vm/examples/: assign.rs  bool.rs  const.rs  deref.rs  fibonacci_recursive.rs  halt.rs  loop.rs  memcopy.rs  mul.rs  not_halt.rs  string.rs
vm/examples/utils/: mod.rs
vm/src/: lib.rs  memory.rs  registers.rs
vm/tests/: array_assign.rs  assign.rs  bool.rs  break.rs  const.rs  fibonacci.rs  memcopy.rs  sort.rs  string.rs  struct_union.rs  utils.rs
vm/tests/programs/: array_assign.ggb  assign.ggb  bool.ggb  const.ggb  fibonacci.ggb  fibonacci_recursive.ggb  halt.ggb  io.ggb  loop.ggb  memcopy.ggb  not_halt.ggb
(+550 files in other folders)
