[package]
name = "ggbc"
version = "0.1.0"
authors = ["german gomez <germangb42@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["serde"]

[dependencies]
ggbc-parser = { path = "../parser" }
serde = { version = "1.0", features = ["derive"], optional = true }
byteorder = "1.3.4"
# bin directory (TODO move into a separete "utils" crate)
rand = "0.7.3"

[dev-dependencies]
ggbc-vm = { path = "../vm" }