[package]
name = "ggbc"
version = "0.1.0"
authors = ["german gomez <germangb42@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["serde"]

[dependencies]
parser = { path = "../parser" }
serde = { version = "1.0", features = ["derive"], optional = true }
thiserror = "1.0"
byteorder = "1.3.4"

[dev-dependencies]
vm = { path = "../vm" }