[package]
name = "ggbc-parser"
version = "0.1.0"
authors = ["german gomez <germangb42@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"

[dev-dependencies]
colorful = "0.2.1"

[features]
default = ["lisp"]
lisp = []
