[package]
name = "vm"
version = "0.1.0"
authors = ["german gomez <germangb42@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggbc = { path = "../ggbc" }
educe = { version = "0.4.13", features = ["Default"], default-features = false }

[dev-dependencies]
ggbc = { path = "../ggbc" }
